v4: Unified accounts, pricing tiers, auth system, billing
- 4 pricing tiers: Free, Captain (49), Admiral (99), Enterprise (custom)
- Supabase auth integration (GitHub + Google OAuth + email)
- Account dashboard with billing, silos, API keys, patterns
- Sign up / Sign in / Sign out flow with mock auth pre-Supabase
- Pricing page with monthly/yearly toggle (20% yearly discount)
- Product cards now show pricing and tier badges
- All 7 serlf sibling domains wired to GitHub Pages
- Status page updated with all 8 domains active

🎖️ Admiral Fleet Control — open source the floor, sell the ceiling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:url" content="https://serlf.ca">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⚓</text></svg>">
     <link rel="stylesheet" href="app.css">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2" defer></script>
 </head>
 <body>
     <div id="app">
@@ -23,6 +24,7 @@
                     <a href="#/products" class="nav-link" data-page="products">Products</a>
                     <a href="#/marketplace" class="nav-link" data-page="marketplace">Marketplace</a>
                     <a href="#/academy" class="nav-link" data-page="academy">Academy</a>
+                    <a href="#/pricing" class="nav-link" data-page="pricing">Pricing</a>
                     <a href="#/status" class="nav-link" data-page="status">Status</a>
                 </nav>
             </div>
@@ -44,6 +46,7 @@
         <main id="page-container"></main>
     </div>
 
+    <script src="auth.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
